--- a/bibtex/ghrepo.bib
+++ b/bibtex/ghrepo.bib
@@ -1,3 +1,3 @@
 @misc{ghrepo,
-  howpublished = "\url{https://github.com/JonasAmrich/psi-chi-squared}"
+  howpublished = "\url{http://github.com/JonasAmrich/psi-chi-squared}"
 }
